fixed bug with jumpy animations

--- a/src/organisms/mega-menu/_mega-menu.scss
+++ b/src/organisms/mega-menu/_mega-menu.scss
@@ -1,7 +1,6 @@
 @charset 'UTF-8';
 
 @include organism(mega-menu) {
-	visibility: hidden;
 	position: absolute;
 	z-index: 1;
 	padding-right: 0;
@@ -12,13 +11,20 @@
 	box-shadow: 0 rhythm(0.5) rhythm(0.5) rgba($color-cyberspace, 0.1);
 
 	&[aria-hidden='false'] {
-		visibility: visible;
 		transform: translateY(0);
 
 		+ {
 			@include organism(domain-search) {
 				display: none;
 			}
+		}
+	}
+
+	&[tabindex='-1'] {
+		a,
+		button,
+		input {
+			visibility: hidden;
 		}
 	}
 
